test/tests/stages/16_characters_and_strings/valid/strings_as_initializers/simple.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  unsigned
  char
  identifier(chars)
  [
  const int(4)
  ]
  =
  string literal("abc")
  ;
  return
  identifier(chars)
  [
  const int(2)
  ]
  ;
  }
