test/tests/stages/16_characters_and_strings/invalid_types/extra_credit/postfix_incr_string.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[13]:
  int
  identifier(main)
  (
  void
  )
  {
  string literal("foo")
  ++
  ;
  return
  const int(0)
  ;
  }
